# practica-dms-2022-2023

./: DiagrmasDiseños  Memoria.md  README.md  Requisitos.md  crear_preguntas.html
components/dms2223backend/: install.sh  setup.cfg  start.sh
components/dms2223backend/dms2223backend/data/: __init__.py
components/dms2223backend/dms2223backend/data/config/: BackendConfiguration.py  __init__.py
components/dms2223backend/dms2223backend/data/db/: __init__.py  declarative_base.py  schema.py  testBBDD.py
components/dms2223backend/dms2223backend/data/db/Elemento/: __init__.py  comentario.py  elemento.py  pregunta.py  respuesta.py
components/dms2223backend/dms2223backend/data/db/Feedback/: __init__.py  feedback.py
components/dms2223backend/dms2223backend/data/resultsets/: __init__.py  comentario_res.py  pregunta_res.py  reporte_res.py  usuario_res.py
components/dms2223backend/dms2223backend/logic/: __init__.py  comentarioLogic.py  preguntaLogic.py  reporteLogic.py  respuestaLogic.py  servicioComentario.py  servicioRespuestas.py  serviciopreguntas.py
components/dms2223backend/dms2223backend/openapi/: spec.yml  spec_rev.yml
components/dms2223backend/dms2223backend/presentation/: __init__.py  index.py
components/dms2223backend/dms2223backend/presentation/rest/: __init__.py  comentario.py  inicio.py  preguntas.py  reporte.py  respuesta.py  security.py  usuarios.py  voto.py
components/dms2223backend/dms2223backend/service/: __init__.py  authservice.py  servicioComentario.py  servicioReportes.py  servicioRespuestas.py  serviciopreguntas.py  serviciousuarios.py
(+87 files in other folders)
